--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
                 <label class="form-group">
             <span class="form-label">Имя</span>
             <input class="form-input" type="text" name="user-name">
-            <svg class="form-icon" width="" height="">
+            <svg class="form-icon" width="18" height="18">
               <use href=""></use>
             </svg>
           </label>
           <label class="form-group">
             <span class="form-label">Телефон</span>
             <input class="form-input" type="tel" name="user-phone">
-            <svg class="form-icon" width="" height="">
+            <svg class="form-icon" width="18" height="18">
               <use href=""></use>
             </svg>
           </label>
           <label class="form-group">
             <span class="form-label">Почта</span>
             <input class="form-input" type="email" name="user-emil">
-            <svg class="form-icon" width="" height="">
+            <svg class="form-icon" width="18" height="18">
               <use href=""></use>
             </svg>
           </label>
@@ -611,10 +611,10 @@
           <p class="footer-form-title">Подпишитесь на рассылку</p>
           <form class="form">
             <label>
-              <input class="form-input" type="email" name="user-emil" placeholder="E-mail">
+              <input class="footer-form-input" type="email" name="user-emil" placeholder="E-mail">
               <button class="footer-btn" type="button">Подписаться
                 <svg class="footer-btn-icon" width="24" height="24">
-                  <use href=""></use>
+                  <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
             </label>
