додані іконки до модалки дз6

--- a/index.html
+++ b/index.html
@@ -65,27 +65,31 @@
                 <span class="form-label">Имя</span>
                 <input class="form-input" type="text" name="user-name">
                 <svg class="form-icon" width="18" height="18">
-                  <use href=""></use>
+                  <use href="./images/icons.svg#icon-name"></use>
                 </svg>
+
               </label>
               <label class="form-group">
                 <span class="form-label">Телефон</span>
                 <input class="form-input" type="tel" name="user-phone">
                 <svg class="form-icon" width="18" height="18">
-                  <use href=""></use>
+                  <use href="./images/icons.svg#icon-tel"></use>
                 </svg>
               </label>
+
               <label class="form-group">
                 <span class="form-label">Почта</span>
                 <input class="form-input" type="email" name="user-emil">
                 <svg class="form-icon" width="18" height="18">
-                  <use href=""></use>
+                  <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </label>
+
               <label class="form-group">
                 <span class="form-label">Комментарий</span>
                 <textarea class="form-input" type="text" name=""></textarea>
               </label>
+
               <label class="form-group">
                 <input type="checkbox" name="" id="">
                 <span>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
