додана розмітка модального вікна дз6

--- a/portfolio.html
+++ b/portfolio.html
@@ -295,7 +295,7 @@
       <div class="footer-form">
         <p class="footer-form-title">Подпишитесь на рассылку</p>
         <form class="form">
-          <label>
+          <label class="footer-form-label">
             <input class="footer-form-input" type="email" name="user-emil" placeholder="E-mail" />
             <button class="footer-btn" type="button">
               Подписаться
