--- a/index.html
+++ b/index.html
@@ -61,42 +61,49 @@
             </button>
             <form class="modal-form">
               <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
-              <label class="form-group">
-                <span class="form-label">Имя</span>
-                <input class="form-input" type="text" name="user-name">
-                <svg class="form-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-name"></use>
+              <div class="form-group" role="group">
+                <label class="form-wrap">
+                  <span class="form-label">Имя</span>
+                  <input class="form-input" type="text" name="user-name">
+                  <svg class="form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-name"></use>
+                  </svg>
+                </label>
+
+                <label class="form-wrap">
+                  <span class="form-label">Телефон</span>
+                  <input class="form-input" type="tel" name="user-phone">
+                  <svg class="form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-tel"></use>
+                  </svg>
+                </label>
+
+                <label class="form-wrap">
+                  <span class="form-label">Почта</span>
+                  <input class="form-input" type="email" name="user-emil">
+                  <svg class="form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-email"></use>
+                  </svg>
+                </label>
+
+                <label class="form-wrap">
+                  <span class="form-label">Комментарий</span>
+                  <textarea class="form-message" type="text" name="" rows="5" placeholder="Введите текст"></textarea>
+                </label>
+              </div>
+
+              <label class="form-agreement">
+                <input class="form-checkbox visually-hidden" type="checkbox" name="agreement">
+                <svg class="form-icon-checkbox" width="16" height="15">
+                  <use class="form-icon-uncheck" href="./images/icons.svg#icon-check-border"></use>
+                  <use class="form-icon-check" href="./images/icons.svg#icon-check"></use>
                 </svg>
-
+                <span class="form-agreement-text">Соглашаюсь с рассылкой и принимаю <a class="form-agreement-link"
+                    href="">Условия
+                    договора</a></span>
               </label>
-              <label class="form-group">
-                <span class="form-label">Телефон</span>
-                <input class="form-input" type="tel" name="user-phone">
-                <svg class="form-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-tel"></use>
-                </svg>
-              </label>
-
-              <label class="form-group">
-                <span class="form-label">Почта</span>
-                <input class="form-input" type="email" name="user-emil">
-                <svg class="form-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </label>
-
-              <label class="form-group">
-                <span class="form-label">Комментарий</span>
-                <textarea class="form-input" type="text" name=""></textarea>
-              </label>
-
-              <label class="form-group">
-                <input type="checkbox" name="" id="">
-                <span>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
-              </label>
-              <button type="submit">Отправить</button>
+              <button class="modal-form-btn" type="submit">Отправить</button>
             </form>
-
           </div>
         </div>
       </div>
@@ -468,7 +475,7 @@
       <div class="footer-form">
         <p class="footer-form-title">Подпишитесь на рассылку</p>
         <form class="form">
-          <label>
+          <label class="footer-form-label">
             <input class="footer-form-input" type="email" name="user-emil" placeholder="E-mail">
             <button class="footer-btn" type="button">Подписаться
               <svg class="footer-btn-icon" width="24" height="24">
