--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 <label class="form-wrap">
                   <span class="form-label">Почта</span>
-                  <input class="form-input" type="email" name="user-emil">
+                  <input class="form-input" type="email" name="user-email">
                   <svg class="form-icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-email"></use>
                   </svg>
@@ -88,7 +88,8 @@
 
                 <label class="form-wrap">
                   <span class="form-label">Комментарий</span>
-                  <textarea class="form-message" type="text" name="" rows="5" placeholder="Введите текст"></textarea>
+                  <textarea class="form-message" type="text" name="user-message" rows="5"
+                    placeholder="Введите текст"></textarea>
                 </label>
               </div>
 
